@@ -5,8 +5,6 @@
 **  
 **  I) HISTORY
 **
-**  May   12, 2010 - Removed tokenizer code
-**  May   11, 2010 - Added support to gzipped XYS files
 **  Dec   02, 2009 - Fixed memory leak (forgotten Free(d0))
 **  July  30, 2009 - Removed 'dimnamesout' from
 **                   the variable definition in
@@ -32,7 +30,6 @@
 #include <R.h>
 #include <Rdefines.h>
 #include <Rinternals.h>
-#include <zlib.h>
 
 #define LINEMAX 20001
 #define WORD 32
@@ -40,26 +37,93 @@
 /***************************************************************
  ** countLines: counts lines, returns integer
 ***************************************************************/
-static int countLines(gzFile *file){
+static int countLines(FILE *file){
+  size_t bytes_read;
+  char buf[LINEMAX + 1];
   int lines = 0;
-  char buffer[1000];
-  char *token;
-  int fields = 3;
 
-  while (!gzeof(file)){
-    gzgets(file, buffer, 1000);
-    token = strtok(buffer, " \t");
-    if (token == NULL) fields--;
-    token = strtok(NULL, " \t");
-    if (token == NULL) fields--;
-    token = strtok(NULL, " \t");
-    if (token == NULL) fields--;
-    if (fields == 3) lines++;
+  while ((bytes_read = fread(buf, sizeof(char), LINEMAX, file)) != 0){
+    char *p = buf;
+    while ((p = memchr(p, '\n', (buf + bytes_read) - p))) {
+      ++p;
+      ++lines;
+    }
+    bytes_read += bytes_read;
   }
-
   return lines;
 }
 
+/***************************************************************
+ ** Tokenset: stores pairs <key=value> and
+ **           the number of such pairs.
+***************************************************************/
+
+typedef struct{
+  char **key;
+  char **value;
+  int n;
+} tokenset;
+
+
+/***************************************************************
+ ** tokenizer: stores <key=value> on a
+ **            tokenset
+***************************************************************/
+
+static void tokenizer(tokenset *header, const char *key, const char *value){
+  int i;
+  i = header->n;
+  header->n++;
+  header->key = Realloc(header->key, header->n, char*);
+  header->value = Realloc(header->value, header->n, char*);
+  header->key[i] = Calloc(strlen(key)+1, char);
+  header->value[i] = Calloc(strlen(value)+1, char);
+  strcpy(header->key[i], key);
+  strcpy(header->value[i], value);
+}
+
+/***************************************************************
+ ** untokenizer: deallocates memory used
+ **              by a tokenset
+***************************************************************/
+
+static void untokenizer(tokenset *header){
+  int i;
+  for (i=0; i < header->n; i++){
+    Free(header->key[i]);
+    Free(header->value[i]);
+  }
+  Free(header->key);
+  Free(header->value);
+  Free(header);
+}
+
+/***************************************************************
+ ** buffer2tokenset: parses tags <key=value>
+ **                  separated by tabs
+ **                  as tokensets
+***************************************************************/
+
+static tokenset *buffer2tokenset(char *buffer){
+  tokenset *header = Calloc(1, tokenset);
+  char *eq, *key, *value;
+  header->n = 0;
+  header->key = NULL;
+  header->value = NULL;
+
+  // Header starts with "# "
+  key = strtok(buffer, " ");
+  // Keys are tab-delimited
+  while (1){
+    key = strtok(NULL, "\t");
+    if (key == NULL) break;
+    eq = strchr(key, '=');
+    *eq = '\0';
+    value = ++eq;
+    tokenizer(header, key, value);
+  }
+  return header;
+}
 
 /***************************************************************
  ** xys_header_field: gets a field in the header of an XYS file.
@@ -69,17 +133,17 @@ static int countLines(gzFile *file){
 ***************************************************************/
 
 static char *xys_header_field(const char *currentFile, const char *field){
-  gzFile *fp;
+  FILE *fp;
   int j;
   char *result, *final;
   char buffer[LINEMAX];
 
-  fp = gzopen(currentFile, "rb");
+  fp = fopen(currentFile, "r");
   if (fp == NULL)
     error("Can't open %s.\n", currentFile);
 
-  gzgets(fp, buffer, LINEMAX);
-  gzclose(fp);
+  fgets(buffer, LINEMAX, fp);
+  fclose(fp);
 
   j = strlen(buffer)-1;
   if (buffer[j] == '\n')
@@ -99,74 +163,70 @@ static char *xys_header_field(const char *currentFile, const char *field){
  ** read_one_xys: reads XYS file. Stores XY coordinates on 'xy'
  **               and intensities on 'signal'
 ***************************************************************/
-static void read_one_xys(const char *filename, double *signal,
-			   int *xy, int i, int nrow, int verbose){
-  int count, n, x, y, j;
-  char buffer[LINEMAX], sc[WORD], ss[WORD], *endps, *token;
-  gzFile fp=NULL;
 
+static void read_one_xys(const char *filename, double *signal,
+			 int *xy, int i, int nrow, int verbose){
+  int n, count;
+  char sx[WORD], sy[WORD], ss[WORD], sc[WORD], *endpx, *endpy, *endps;
+  FILE *fp;
   if (verbose) Rprintf("Reading %s.\n", filename);
-  fp = gzopen(filename, "rb");
+  fp = fopen(filename, "r");
   if (fp == NULL)
     error("Can't open %s.\n", filename);
 
   // Header - 2 lines - skip
-  while (gzgetc(fp) != '\n');
-  while (gzgetc(fp) != '\n');
+  while (fgetc(fp) != '\n');
+  while (fgetc(fp) != '\n');
   count = 0;
-
-  while (count < nrow){
-    gzgets(fp, buffer, LINEMAX);
-
-    j = strlen(buffer)-1;
-    if (buffer[j] == '\n')
-      buffer[j] = '\0';
-
-    n = sscanf(buffer, "%d\t%d\%s\t%s", &x, &y, ss, sc);
+  while (!feof(fp)){
+    n = fscanf(fp, "%s %s %s %s", sx, sy, ss, sc);
     
-    // If it's the end of file, we're done.
-    if (n == EOF) break;
-
     // Last line is a CR, so must match n == 4
     if (n == 4){
       // Read XY coordinates only for first file
       // and trust the rest...
       if (i == 0){
-	xy[count] = x;
-	xy[count + nrow] = y;
+	xy[count] = strtol(sx, &endpx, 0);
+	xy[count + nrow] = strtol(sy, &endpy, 0);
       }
       if (ss[0] != 'N'){
 	signal[count + i*nrow] = strtod(ss, &endps);
-      } else { // NA_REAL is R-specific
+      }else{ // NA_REAL is R-specific
 	signal[count + i*nrow] = NA_REAL;
       }
-    } else {
-      gzclose(fp);
-      error("Line %d of %s has an unexpected format.\n", count, filename);
     }
+
     count++;
   }
-  gzclose(fp);
-  if (count != nrow)
-    error("%s: Expected %d lines. Found %d lines. Corrupted file?",
-	  filename, nrow, count);
+  fclose(fp);
 }
+
+/***************************************************************
+ ** R_read_xys_files: reads XYS files.
+ **    filenames: character vector with filenames
+ **    verbosity: TRUE/FALSE flag
+ **
+ ** Function returns a list with two elements:
+ **    coordinates: XY coordinates (N x 2 matrix)
+ **    intensities: intensities (N x N_FILES matrix)
+ **    date: date for each XYS file (character vector N_FILES)
+***************************************************************/
 
 SEXP R_read_xys_files(SEXP filenames, SEXP verbosity){
   int nfiles, nrows, i, verbose, *ptr2xy;
   double *ptr2signal;
-  gzFile *fp;
+  FILE *fp;
   SEXP signal, xy, output;
   SEXP dimnames, dimnamesxy, fnames, colnamesxy, namesout, dates;
   char *d0, *d1;
 
   verbose = asLogical(verbosity);
   nfiles = length(filenames);
-  fp = gzopen(CHAR(STRING_ELT(filenames, 0)), "rb");
+  fp = fopen(CHAR(STRING_ELT(filenames, 0)), "r");
   if (fp == NULL)
     error("Can't open %s.\n", CHAR(STRING_ELT(filenames, 0)));
   nrows = countLines(fp)-2;
-  gzclose(fp);
+  fclose(fp);
 
   // Test files are of the same type here
   if (verbose) Rprintf("Checking designs for each XYS file... ");
@@ -237,23 +297,43 @@ SEXP R_read_xys_files(SEXP filenames, SEXP verbosity){
   return(output);
 }
 
-/***************************************************************
- ** countLines: counts lines, returns integer
-***************************************************************/
-/*
-static int countLines(FILE *file){
-  size_t bytes_read;
-  char buf[LINEMAX + 1];
-  int lines = 0;
 
-  while ((bytes_read = fread(buf, sizeof(char), LINEMAX, file)) != 0){
-    char *p = buf;
-    while ((p = memchr(p, '\n', (buf + bytes_read) - p))) {
-      ++p;
-      ++lines;
-    }
-    bytes_read += bytes_read;
+/***************************************************************
+ ** R_read_xys_header: reads header of 1 XYS file.
+ **    filename:  filenames
+ **
+ ** Function returns a list with several elements.
+***************************************************************/
+
+SEXP R_read_xys_header(SEXP filename){
+  int j;
+  FILE *fp;
+  char buffer[LINEMAX];
+  const char *currentFile;
+  tokenset *header;
+  SEXP output, namesout;
+
+  currentFile = CHAR(STRING_ELT(filename, 0));
+  fp = fopen(currentFile, "r");
+  if (fp == NULL)
+    error("Can't open %s.\n", currentFile);
+  fgets(buffer, LINEMAX, fp);
+  fclose(fp);
+
+  j = strlen(buffer)-1;
+  if (buffer[j] == '\n')
+    buffer[j] = '\0';
+
+  header = buffer2tokenset(buffer);
+  PROTECT(output = allocVector(VECSXP, header->n));
+  PROTECT(namesout = allocVector(STRSXP, header->n));
+  for (j=0; j < header->n; j++){
+    SET_VECTOR_ELT(output, j, mkString(header->value[j]));
+    SET_STRING_ELT(namesout, j, mkChar(header->key[j]));
   }
-  return lines;
+  setAttrib(output, R_NamesSymbol, namesout);
+
+  UNPROTECT(2);
+  untokenizer(header);
+  return(output);
 }
-*/
